--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "aicommits",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Writes your git commit messages for you with AI",
-  "main": "cli.js",
+  "main": "index.js",
   "bin": {
-    "aicommits": "./cli.js"
+    "aicommits": "./index.js"
   },
   "type": "module",
   "repository": "https://github.com/Nutlope/aicommits",
