--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "aicommits",
   "version": "0.1.4",
   "description": "Writes your git commit messages for you with AI",
-  "main": "index.js",
+  "main": "bin/index.js",
   "bin": {
-    "aicommits": "./index.js"
+    "aicommits": "bin/index.js"
   },
-  "type": "module",
   "repository": "https://github.com/Nutlope/aicommits",
   "author": "Hassan El Mghari (@nutlope)",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "chalk": "^5.2.0",
     "inquirer": "^9.1.4",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "typescript": "^4.9.5"
   }
 }
