--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aicommits",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "Writes your git commit messages for you with AI",
   "main": "bin/index.js",
   "bin": {
@@ -9,13 +9,15 @@
   "repository": "https://github.com/Nutlope/aicommits",
   "author": "Hassan El Mghari (@nutlope)",
   "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.9.5"
+  },
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
     "chalk": "^5.2.0",
     "inquirer": "^9.1.4",
-    "node-fetch": "^3.3.0",
-    "typescript": "^4.9.5"
+    "node-fetch": "^3.3.0"
   }
 }
