--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-/node_modules
-package-lock.json
-bin
+# macOS
+.DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Dependency directories
+/node_modules/
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
+.env
+.env.test
+
+# VSCode
+.vscode
+
+# Distribution
+dist
+
+# Eslint cache
+.eslintcache
