--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
 	],
 	"bin": "dist/index.js",
 	"scripts": {
-		"build": "pkgroll"
-	},
-	"dependencies": {
-		"chalk": "^4.1.2",
-		"inquirer": "^8.0.0",
-		"node-fetch": "^2.6.9"
+		"build": "pkgroll",
+		"lint": "eslint --cache ."
 	},
 	"devDependencies": {
+		"@clack/prompts": "link:/Users/osame/Documents/public-github/natemoo-re/clack/packages/prompts",
 		"@pvtnbr/eslint-config": "^0.33.0",
 		"@types/node": "^18.13.0",
+		"dotenv": "^16.0.3",
 		"eslint": "^8.34.0",
+		"execa": "^7.0.0",
+		"kolorist": "^1.7.0",
+		"openai": "^3.1.0",
 		"pkgroll": "^1.9.0",
 		"typescript": "^4.9.5"
 	},
 	"eslintConfig": {
 		"extends": "@pvtnbr"
+	},
+	"dependencies": {
+		"@clack/root": "link:/Users/osame/Documents/public-github/natemoo-re/clack"
 	}
 }
