Update branch names for test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,8 @@ name: Test
 
 on:
   push:
-    branches: [develop]
+    branches: [main]
   pull_request:
-    branches: [master, develop]
 
 jobs:
   test:
