Add `git aic` subcommand
Besides executing `aicommits` to start the executable, a user can also
use `git aic`. `aic` was chosen because `git aicommits` might be a bit
too much to type.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "files": [
     "bin"
   ],
-  "bin": "bin/index.js",
+  "bin": {
+    "aicommits": "bin/index.js",
+    "git-aic": "bin/index.js"
+  },
   "repository": "https://github.com/Nutlope/aicommits",
   "author": "Hassan El Mghari (@nutlope)",
   "license": "MIT",
