--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"chalk": "^4.1.2",
 		"inquirer": "^8.0.0",
-		"node-fetch": "^2.6.9"
+		"openai": "^3.1.0"
 	},
 	"devDependencies": {
 		"@pvtnbr/eslint-config": "^0.33.0",
