--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@pvtnbr/eslint-config": "^0.33.0",
+		"@types/dotenv": "^8.2.0",
 		"@types/node": "^18.13.0",
 		"eslint": "^8.34.0",
 		"typescript": "^4.9.5"
