--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
 	"devDependencies": {
 		"@clack/prompts": "^0.2.1",
 		"@pvtnbr/eslint-config": "^0.33.0",
+		"@types/ini": "^1.3.31",
 		"@types/node": "^18.13.0",
 		"clean-pkg-json": "^1.2.0",
-		"dotenv": "^16.0.3",
 		"eslint": "^8.34.0",
 		"execa": "^7.0.0",
+		"ini": "^3.0.1",
 		"kolorist": "^1.7.0",
 		"lint-staged": "^13.1.2",
 		"pkgroll": "^1.9.0",
