--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 	},
 	"dependencies": {
 		"chalk": "^4.1.2",
+		"ini": "^3.0.1",
 		"inquirer": "^8.0.0",
 		"openai": "^3.1.0"
 	},
 	"devDependencies": {
 		"@pvtnbr/eslint-config": "^0.33.0",
+		"@types/ini": "^1.3.31",
 		"@types/node": "^18.13.0",
 		"eslint": "^8.34.0",
 		"typescript": "^4.9.5"
