build: use esm, strict mode, and es2020

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "MIT",
 	"repository": "https://github.com/Nutlope/aicommits",
 	"author": "Hassan El Mghari (@nutlope)",
+	"type": "module",
 	"files": [
 		"dist"
 	],
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@pvtnbr/eslint-config": "^0.33.0",
 		"@types/ini": "^1.3.31",
+		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.13.0",
 		"eslint": "^8.34.0",
 		"typescript": "^4.9.5"
