--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,10 @@ jobs:
         run_install: true
 
     - name: Type check
-      run: pnpm build
+      run: pnpm type-check
 
     - name: Lint
       run: pnpm lint
+
+    - name: Build
+      run: pnpm build
