--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
 	],
 	"bin": "dist/cli.mjs",
 	"scripts": {
+		"prepare": "simple-git-hooks",
 		"build": "pkgroll",
 		"lint": "eslint --cache .",
 		"type-check": "tsc"
+	},
+	"simple-git-hooks": {
+		"pre-commit": "pnpm lint-staged"
+	},
+	"lint-staged": {
+		"*.ts": "eslint --cache"
 	},
 	"dependencies": {
 		"chalk": "^4.1.2",
@@ -33,7 +40,9 @@
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.13.0",
 		"eslint": "^8.34.0",
+		"lint-staged": "^13.1.2",
 		"pkgroll": "^1.9.0",
+		"simple-git-hooks": "^2.8.1",
 		"typescript": "^4.9.5"
 	},
 	"eslintConfig": {
