chore: use concise syntax for package.json#repository

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"commit"
 	],
 	"license": "MIT",
-	"repository": "https://github.com/Nutlope/aicommits",
+	"repository": "Nutlope/aicommits",
 	"author": "Hassan El Mghari (@nutlope)",
 	"type": "module",
 	"files": [
