--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
 	"compilerOptions": {
 		"noEmit": true,
+		"target": "ES2020",
+		"module": "Node16",
+		"strict": true,
+		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"esModuleInterop": true,
-		"moduleResolution": "Node16",
-		"resolveJsonModule": true,
-		"strict": true,
-		"skipLibCheck": true,
+		"skipLibCheck": true
 	},
 }
