--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
 		"lint": "eslint --cache .",
 		"type-check": "tsc"
 	},
-	"dependencies": {
-		"openai": "^3.1.0"
-	},
 	"devDependencies": {
 		"@clack/prompts": "^0.2.2",
 		"@pvtnbr/eslint-config": "^0.33.0",
@@ -31,6 +28,7 @@
 		"@types/node": "^18.13.0",
 		"eslint": "^8.34.0",
 		"execa": "^7.0.0",
+		"openai": "^3.1.0",
 		"ini": "^3.0.1",
 		"kolorist": "^1.7.0",
 		"pkgroll": "^1.9.0",
