--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.2.2",
+		"cleye": "^1.3.2",
 		"execa": "^7.0.0",
 		"ini": "^3.0.1",
 		"kolorist": "^1.7.0",
