--- a/package.json
+++ b/package.json
@@ -32,8 +32,13 @@
 		"@types/ini": "^1.3.31",
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.13.0",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
 		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"pkgroll": "^1.9.0",
+		"prettier": "^2.8.4",
 		"typescript": "^4.9.5"
 	},
 	"eslintConfig": {
