--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/ini": "^1.3.31",
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.13.0",
+		"cleye": "^1.3.2",
 		"eslint": "^8.34.0",
 		"execa": "^7.0.0",
 		"ini": "^3.0.1",
