--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"pre-commit": "pnpm lint-staged"
 	},
 	"lint-staged": {
-		"*.ts": "eslint --cache"
+		"*.ts": "eslint --fix"
 	},
 	"devDependencies": {
 		"@clack/prompts": "^0.2.2",
