Build in watch mode on attach

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,6 @@
         "ghcr.io/devcontainers-contrib/features/pnpm:2": {}
     },
     "postCreateCommand": "nvm i && pnpm i",
+    "postAttachCommand": "pnpm build -w",
     "remoteUser": "node"
 }
