Add dependency '@dqbd/tiktoken' and update OpenAI configuration to use 'text-davinci-003' model

--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
 		]
 	},
 	"release": {
-		"branches": ["main"]
+		"branches": [
+			"main"
+		]
+	},
+	"dependencies": {
+		"@dqbd/tiktoken": "^0.3.0"
 	}
 }
