Add @dqbd/tiktoken as devDependency and remove from dependencies

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@clack/prompts": "^0.2.2",
+		"@dqbd/tiktoken": "^0.3.0",
 		"@pvtnbr/eslint-config": "^0.33.0",
 		"@types/ini": "^1.3.31",
 		"@types/inquirer": "^9.0.3",
@@ -63,8 +64,5 @@
 		"branches": [
 			"main"
 		]
-	},
-	"dependencies": {
-		"@dqbd/tiktoken": "^0.3.0"
 	}
 }
