--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.13.0",
 		"cleye": "^1.3.2",
+		"clipboardy": "^3.0.0",
 		"eslint": "^8.34.0",
 		"execa": "^7.0.0",
 		"ini": "^3.0.1",
@@ -60,6 +61,8 @@
 		]
 	},
 	"release": {
-		"branches": ["main"]
+		"branches": [
+			"main"
+		]
 	}
 }
