refactor: use tokenizer to accurately count tokens (#114)
Co-authored-by: hiroki osame <hiroki.osame@gmail.com>

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 	"lint-staged": {
 		"*.ts": "eslint --cache"
 	},
+	"dependencies": {
+		"@dqbd/tiktoken": "^0.4.0"
+	},
 	"devDependencies": {
 		"@clack/prompts": "^0.2.2",
 		"@pvtnbr/eslint-config": "^0.33.0",
