--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"*.ts": "eslint --cache"
 	},
 	"dependencies": {
-		"@dqbd/tiktoken": "^0.4.0"
+		"@dqbd/tiktoken": "^0.4.0",
+		"https-proxy-agent": "^5.0.1"
 	},
 	"devDependencies": {
 		"@clack/prompts": "^0.6.1",
