--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"build": "pkgroll --minify",
 		"lint": "eslint --cache .",
 		"type-check": "tsc",
+		"test": "tsx tests",
 		"prepack": "pnpm build"
 	},
 	"simple-git-hooks": {
@@ -40,9 +41,11 @@
 		"cleye": "^1.3.2",
 		"eslint": "^8.35.0",
 		"execa": "^7.0.0",
+		"fs-fixture": "^1.2.0",
 		"ini": "^3.0.1",
 		"kolorist": "^1.7.0",
 		"lint-staged": "^13.1.2",
+		"manten": "^0.7.0",
 		"openai": "^3.2.1",
 		"pkgroll": "^1.9.0",
 		"simple-git-hooks": "^2.8.1",
