--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"openai": "^3.2.1",
 		"pkgroll": "^1.9.0",
 		"simple-git-hooks": "^2.8.1",
+		"tsx": "^3.12.3",
 		"typescript": "^4.9.5"
 	},
 	"eslintConfig": {
