--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,11 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 10
 
     steps:
@@ -34,3 +38,8 @@ jobs:
 
     - name: Build
       run: pnpm build
+
+    - name: Test
+      run: |
+        pnpm test
+        pnpm --use-node-version=14.21.3 test
