--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"lint": "eslint --cache .",
 		"type-check": "tsc",
 		"test": "tsx tests",
-		"prepack": "pnpm build"
+		"prepack": "pnpm build && clean-pkg-json"
 	},
 	"simple-git-hooks": {
 		"pre-commit": "pnpm lint-staged"
@@ -38,6 +38,7 @@
 		"@types/ini": "^1.3.31",
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^18.14.2",
+		"clean-pkg-json": "^1.2.0",
 		"cleye": "^1.3.2",
 		"eslint": "^8.35.0",
 		"execa": "^7.0.0",
