--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Type check
       run: pnpm type-check
 
-    - name: Lint
-      run: pnpm lint
+    # - name: Lint
+    #   run: pnpm lint
 
     - name: Build
       run: pnpm build
