--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"scripts": {
 		"prepare": "simple-git-hooks",
-		"build": "pkgroll",
+		"build": "pkgroll --minify",
 		"lint": "eslint --cache .",
 		"type-check": "tsc",
 		"test": "tsx tests",
